# Mink

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
api/: database.py  indexes.py
api/v1/dependencies/: auth.py
api/v1/middlewares/: errors.py
api/v1/models/: activity.py  common.py  friendship.py  notification.py  payment_request.py  refresh_token.py  user.py
api/v1/routes/: __init__.py  activity.py  auth.py  friendship.py  notification.py  payment_request.py  user.py
api/v1/schemas/: activity.py  auth.py  friendship.py  notification.py  payment_request.py  user.py
api/v1/services/: activity.py  auth.py  friendship.py  notification.py  payment_request.py  user.py
api/v1/utils/: config.py  jwt.py
scripts/: test-auth.html
tests/: conftest.py  test_onboarding.py
