[project]
name = "mink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "magic-admin>=2.5.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "typing-extensions>=4.16.0",
    "uvicorn>=0.50.1",
]
